# InteractiveStoryGame

./: ARCHITECTURE.md  LICENSE  NarrativeEngine.md  README.md  TODOS.md  app.py  game.py  index.html  main.py  model_providers.py  pyproject.toml  requirements.txt
config/: game_config.yml  models.yml
docs/: AdaptiveNPCs.html  BranchingNarrative.html
src/: app.py  character.py  config.py  drama_manager.py  game.py  model_providers.py  narrative_engine.py  speech_manager.py  story_save_manager.py
tests/: test_character.py  test_narrative_engine.py  test_savemanager.py
